# c0-compiler

./: .ghc.environment.x86_64-linux-8.6.5  .gitignore  LICENSE  README.md  c0.cabal  y.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: .#AST.hs  AST.hs  Lexer.x  MachineSym.hs  Main.hs  MiddleCode.hs  Parser.hs  Parser.info  Parser.y  TestLexer.hs  TypeCheck.hs
src/srcLexer/: Lexer.hs  Lexer.x  MainLexer.hs  TestLexer.hs
test/: .#TypeCheckTest.hs  LexerTest.hs  MachineSymTest.hs  MainLexerTest.hs  MainMachineSymTest.hs  MainMiddleCodeTest.hs  MainParserTest.hs  MainTypeCheckTest.hs  MiddleCodeTest.hs  ParserTest.hs  Test.hs  TestPrograms.hs  TypeCheckTest.hs  testCreateScript.sh  testCreation.c  testCreationReadMe.txt  testExample.txt
